--- a/src/assets/sass/utils/vars.sass
+++ b/src/assets/sass/utils/vars.sass
@@ -15,4 +15,6 @@ $light-color            : #7F848C
 $dark-color             : #363C46
 $light-background       : #E8EDF1  
 $dark-background        : #D9E1E8 
+$background-2A313C      : #2A313C
 $background-burger      : linear-gradient(134.83deg, #363C46 0%, #1D2531 100%)
+$green-color            :  #00B047 
