--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -18,8 +18,6 @@ body
   font-weight: 400
   height: 100%
 
-*
-  transition: 100ms ease
 *,
 *:before,
 *:after
@@ -89,6 +87,8 @@ section,
   font-size: 1.8rem
   text-align: center
   margin-bottom: 70px
-
+//Helpers
+.dn
+  display: none
 //Импорты страниц и всплывающих окон
 @import "modules/theme"
