--- a/src/assets/sass/utils/reset.sass
+++ b/src/assets/sass/utils/reset.sass
@@ -43,6 +43,7 @@ html
 *,
 *:before,
 *:after
+  outline: 0
   box-sizing: border-box
 *:focus
   outline: 0
@@ -64,11 +65,11 @@ textarea
   box-shadow: none
 
 input, textarea, select, button
-  outline: none
   border: none
   font-size: 100%
   margin: 0
   padding: 0
+  outline: 0
 button, input
   line-height: normal
 
